<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_content_padding"
    android:paddingVertical="@dimen/vertical_content_padding"
    tools:context=".PaymentMethodActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/creditCard"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/payment_method_card"
            android:background="@drawable/radio_background"
            android:button="@android:color/transparent"
            android:textSize="20dp"
            android:checked="true"
            android:layout_marginBottom="30dp"
            android:drawableRight="@drawable/ic_credit_card"
            android:drawablePadding="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/pagoEfectivo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/payment_method_cash"
            android:background="@drawable/radio_background"
            android:button="@android:color/transparent"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:drawableRight="@drawable/ic_pago_efectivo"
            android:drawablePadding="20dp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/instant"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/payment_method_instant"
            android:background="@drawable/radio_background"
            android:button="@android:color/transparent"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:drawableRight="@drawable/ic_cash"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/paypal"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/payment_method_paypal"
            android:background="@drawable/radio_background"
            android:button="@android:color/transparent"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:drawableRight="@drawable/ic_paypal"
            android:drawablePadding="20dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnChoosePayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>