<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".serviceDetailsActivity"
    android:paddingTop="30dp"
    android:paddingHorizontal="@dimen/horizontal_content_padding">
    <Button
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_iback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_detail_service"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTicket">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txtname"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/nunito_font"
                    android:textColor="@color/yellow"
                    android:text="@string/title_detail_service_name"

                    android:textSize="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/PImage"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtname" />

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtname" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#011627"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnAppointment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="Horarios" />

                    <Button
                        android:id="@+id/btnImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="Imagenes" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/light_ticket_text"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_below="@+id/btnAppointment"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:text="Fecha de creacion:" />

                    <TextView
                        android:id="@+id/txtDateService"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="12dp"
                        android:fontFamily="@font/nunito_font"
                        android:textColor="@color/white"
                        android:layout_below="@+id/textView5"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/title_detail_date_create_service" />
                    <TextView
                        android:id="@+id/textView7"
                        style="@style/light_ticket_text"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/txtDateService"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/title_detail_service" />

                    <TextView
                        android:id="@+id/txtdescription"
                        android:fontFamily="@font/nunito_font"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_below="@+id/textView7"
                        android:layout_width="match_parent"
                        android:paddingBottom="10dp"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
